--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@
 title: Becker Rantin about Rust
 email: rust@deathbyescalator.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Learning rust with borrowed time.
 baseurl: "/rantin-about-rust" # the subpath of your site, e.g. /blog
 url: "http://sbeckeriv.github.io" # the base hostname & protocol for your site
 twitter_username: sbeckeriv
